# rules_julia

./: .bazelrc  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  bzlmod.html  index.html  pkg.html  print.html  rules.html  searchindex.js  searchindex.json  settings.html  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: github.bazelrc  release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
julia/: BUILD.bazel  defs.bzl  extensions.bzl  julia_binary.bzl  julia_format_aspect.bzl  julia_format_test.bzl  julia_info.bzl  julia_library.bzl  julia_standalone_binary.bzl  julia_test.bzl  julia_toolchain.bzl
julia/pkg/: BUILD.bazel  defs.bzl  extensions.bzl  julia_pkg_compiler.bzl  julia_pkg_test.bzl
julia/pkg/private/: BUILD.bazel  julia_pkg_compile_info.bzl  pkg.bzl  pkg_compiler.jl  pkg_tester.jl
julia/private/: BUILD.bazel  binary_wrapper.bat.tpl  binary_wrapper.bzl  binary_wrapper.sh.tpl  binary_wrapper_maker.jl  entrypoint.jl  format.bzl  julia.bzl  julia_common.bzl  project_toml_aspect.bzl  providers.bzl  rlocation.bzl  standalone.bzl  toolchain.bzl  toolchain_repo.bzl  versions.bzl
julia/private/format/: BUILD.bazel  Manifest.bazel.json  Manifest.toml  Project.toml
julia/private/format/src/: format_checker.jl  format_fixer.jl
julia/private/project_toml_generator/: BUILD.bazel
julia/private/project_toml_generator/src/: project_toml_generator.jl
julia/private/standalone_compiler/: BUILD.bazel  Manifest.bazel.json  Manifest.toml  Project.toml  standalone_wrapper.bat.tpl  standalone_wrapper.sh.tpl
julia/private/standalone_compiler/src/: standalone_compiler.jl
julia/private/tests/binary/: BUILD.bazel  writer.jl
julia/private/tests/binary_with_lib/: BUILD.bazel  writerlib_writer.jl
julia/private/tests/format/: BUILD.bazel
julia/private/tests/format/binary/: test_bin.jl
julia/private/tests/format/test/: test_target.jl
julia/private/tests/project_toml_aspect/calc_utils/: BUILD.bazel
julia/private/tests/project_toml_aspect/calc_utils/src/: calc_utils.jl
julia/private/tests/project_toml_aspect/consumer/: BUILD.bazel
julia/private/tests/project_toml_aspect/consumer/src/: multi_deps_test.jl
julia/private/tests/project_toml_aspect/math_utils/: BUILD.bazel
julia/private/tests/project_toml_aspect/math_utils/src/: math_utils.jl
julia/private/tests/project_toml_aspect/string_utils/: BUILD.bazel
julia/private/tests/project_toml_aspect/string_utils/src/: string_utils.jl
julia/private/tests/project_toml_aspect/test/: BUILD.bazel  diff_test.jl  golden_calc_utils.Project.toml  golden_multi_deps_test.Project.toml  golden_multi_deps_test.v1_10_10.Manifest.toml  math_utils.Project.toml  multi_deps_test.Manifest.toml  multi_deps_test.Project.toml  project_toml_path_validation_test.jl  project_toml_test_rule.bzl  string_utils.Project.toml
julia/private/tests/standalone_bin/: BUILD.bazel
julia/private/tests/standalone_bin/src/: writer.jl
julia/private/tests/standalone_bin_with_lib/: BUILD.bazel
julia/private/tests/standalone_bin_with_lib/src/: writerlib_writer.jl
julia/private/tests/test/: BUILD.bazel  hash_test.jl
julia/private/tests/test_with_lib/: BUILD.bazel  writelib_test.jl
julia/runfiles/: BUILD.bazel
julia/runfiles/src/: Runfiles.jl
julia/runfiles/tests/: BUILD.bazel  data.txt  runfiles_test.jl
julia/settings/: .JuliaFormatter.toml  BUILD.bazel  settings.bzl
tools/bzl_version_test/: BUILD.bazel  bzl_version_test.jl
tools/update_versions/: update_versions.py
