load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "extensions.bzl",
    "julia_pkg_compiler.bzl",
    "julia_pkg_test.bzl",
    "defs.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = ["//julia/pkg/private:bzl_lib"],
)
