load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":binary_wrapper.bzl", "julia_binary_wrapper")

exports_files([
    "binary_wrapper.bat.tpl",
    "binary_wrapper.sh.tpl",
    "binary_wrapper_maker.jl",
    "entrypoint.jl",
])

# This target exists only to get picked up by the formatter.
# The formatter should probably be smarter and only pick up
# real Julia targets.
filegroup(
    name = "entrypoint",
    srcs = ["entrypoint.jl"],
)

julia_binary_wrapper(
    name = "binary_wrapper.tpl",
    template = select({
        "@platforms//os:windows": "binary_wrapper.bat.tpl",
        "//conditions:default": "binary_wrapper.sh.tpl",
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]) + ["@rules_cc//cc:bzl_srcs"],
    visibility = ["//julia:__pkg__"],
    deps = [
        "//julia/settings:settings_bzl",
        "@rules_cc//cc/common",
    ],
)
