load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    ":settings.bzl",
    "formatter_config",
    "version",
)

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "settings_bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//julia/private:__pkg__"],
    deps = [
        "@bazel_skylib//rules:common_settings",
    ],
)

formatter_config()

version()
