load("//julia/private:format.bzl", "julia_formatter_binary")
load("//julia/private:julia.bzl", "julia_binary")

exports_files([
    "Project.toml",
    "Manifest.toml",
    "Manifest.bazel.json",
    "src/format_checker.jl",
])

julia_binary(
    name = "format_checker",
    srcs = ["src/format_checker.jl"],
    visibility = ["//visibility:public"],
    deps = [
        "//julia/runfiles",
        "@rules_julia_fmt//:JuliaFormatter",
    ],
)

julia_formatter_binary(
    name = "format_checker_safe",
    binary = ":format_checker",
    visibility = ["//visibility:public"],
)

julia_binary(
    name = "format_fixer",
    srcs = ["src/format_fixer.jl"],
    data = ["//julia/settings:formatter_config"],
    env = {
        "JULIA_FORMATTER_CONFIG_PATH": "$(rlocationpath //julia/settings:formatter_config)",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//julia/runfiles",
        "@rules_julia_fmt//:JuliaFormatter",
    ],
)
