load("//julia:julia_binary.bzl", "julia_binary")
load("//julia/private:binary_wrapper.bzl", "julia_binary_wrapper")

exports_files([
    "Project.toml",
    "Manifest.toml",
    "Manifest.bazel.json",
    "standalone_wrapper.sh.tpl",
    "standalone_wrapper.bat.tpl",
])

julia_binary_wrapper(
    name = "standalone_wrapper.tpl",
    template = select({
        "@platforms//os:windows": "standalone_wrapper.bat.tpl",
        "//conditions:default": "standalone_wrapper.sh.tpl",
    }),
    visibility = ["//visibility:public"],
)

julia_binary(
    name = "standalone_compiler",
    srcs = ["src/standalone_compiler.jl"],
    visibility = ["//visibility:public"],
    deps = [
        "@rules_julia_sac//:PackageCompiler",
    ],
)
