load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//julia:julia_binary.bzl", "julia_binary")
load("//julia:julia_standalone_binary.bzl", "julia_standalone_binary")

julia_binary(
    name = "writerlib_writer",
    srcs = ["src/writerlib_writer.jl"],
    deps = ["//julia/private/tests/library:writelib"],
)

# Test that we can create a standalone binary with library dependencies
julia_standalone_binary(
    name = "writerlib_writer_standalone",
    binary = ":writerlib_writer",
)

# Test that the underlying binary still works
run_binary(
    name = "writer_output",
    outs = ["writer_output.txt"],
    args = [
        "--output",
        "$(execpath :writer_output.txt)",
    ],
    tool = ":writerlib_writer_standalone",
)

write_file(
    name = "writer_expected",
    out = "writer_expected.txt",
    content = [
        "La-Li-Lu-Le-Lo.",
        "",
    ],
    newline = "unix",
)

diff_test(
    name = "writer_diff_test",
    file1 = ":writer_expected.txt",
    file2 = ":writer_output.txt",
)
