load("//julia:julia_test.bzl", "julia_test")
load(":project_toml_test_rule.bzl", "diff_test", "julia_project_toml_test_rule")

exports_files([
    "diff_test.jl",
])

# Rule that runs the aspect on consumer targets and provides output groups
julia_project_toml_test_rule(
    name = "project_toml_test",
    targets = [
        "//julia/private/tests/project_toml_aspect/consumer:multi_deps_test",
        "//julia/private/tests/project_toml_aspect/math_utils",
        "//julia/private/tests/project_toml_aspect/string_utils",
        "//julia/private/tests/project_toml_aspect/calc_utils",
    ],
)

# Filegroup to access the generated Project.toml for the main consumer
filegroup(
    name = "multi_deps_test_project_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_project_toml_test_multi_deps_test",
)

# Filegroup to access the generated Project.toml for math_utils
filegroup(
    name = "math_utils_project_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_project_toml_test_math_utils",
)

# Filegroup to access the generated Project.toml for string_utils
filegroup(
    name = "string_utils_project_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_project_toml_test_string_utils",
)

# Filegroup to access the generated Project.toml for calc_utils
filegroup(
    name = "calc_utils_project_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_project_toml_test_calc_utils",
)

# Filegroup to access the generated Manifest.toml for the main consumer
filegroup(
    name = "multi_deps_test_manifest_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_manifest_toml_test_multi_deps_test",
)

# Filegroup to access the generated Manifest.toml for math_utils
filegroup(
    name = "math_utils_manifest_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_manifest_toml_test_math_utils",
)

# Filegroup to access the generated Manifest.toml for string_utils
filegroup(
    name = "string_utils_manifest_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_manifest_toml_test_string_utils",
)

# Filegroup to access the generated Manifest.toml for calc_utils
filegroup(
    name = "calc_utils_manifest_toml",
    srcs = [":project_toml_test"],
    output_group = "julia_manifest_toml_test_calc_utils",
)

# Version-specific golden file aliases.
# When --//julia/settings:version=1.10.10 is set, use the v1_10_10 golden files;
# otherwise use the default (1.12.5) golden files.
_GOLDEN_FILES = {
    "golden_calc_utils_manifest_toml": {
        "default": "golden_calc_utils.Manifest.toml",
        "v1_10_10": "golden_calc_utils.v1_10_10.Manifest.toml",
    },
    "golden_calc_utils_project_toml": {
        "default": "golden_calc_utils.Project.toml",
        "v1_10_10": "golden_calc_utils.v1_10_10.Project.toml",
    },
    "golden_math_utils_manifest_toml": {
        "default": "golden_math_utils.Manifest.toml",
        "v1_10_10": "golden_math_utils.v1_10_10.Manifest.toml",
    },
    "golden_math_utils_project_toml": {
        "default": "golden_math_utils.Project.toml",
        "v1_10_10": "golden_math_utils.v1_10_10.Project.toml",
    },
    "golden_multi_deps_test_manifest_toml": {
        "default": "golden_multi_deps_test.Manifest.toml",
        "v1_10_10": "golden_multi_deps_test.v1_10_10.Manifest.toml",
    },
    "golden_multi_deps_test_project_toml": {
        "default": "golden_multi_deps_test.Project.toml",
        "v1_10_10": "golden_multi_deps_test.v1_10_10.Project.toml",
    },
    "golden_string_utils_manifest_toml": {
        "default": "golden_string_utils.Manifest.toml",
        "v1_10_10": "golden_string_utils.v1_10_10.Manifest.toml",
    },
    "golden_string_utils_project_toml": {
        "default": "golden_string_utils.Project.toml",
        "v1_10_10": "golden_string_utils.v1_10_10.Project.toml",
    },
}

[
    alias(
        name = name,
        actual = select({
            "//julia/settings:version_1.10.10": files["v1_10_10"],
            "//conditions:default": files["default"],
        }),
    )
    for name, files in _GOLDEN_FILES.items()
]

# Diff tests to verify the generated Project.toml files match expected content
diff_test(
    name = "multi_deps_test_project_toml_diff",
    file1 = ":golden_multi_deps_test_project_toml",
    file2 = ":multi_deps_test_project_toml",
)

diff_test(
    name = "math_utils_project_toml_diff",
    file1 = ":golden_math_utils_project_toml",
    file2 = ":math_utils_project_toml",
)

diff_test(
    name = "string_utils_project_toml_diff",
    file1 = ":golden_string_utils_project_toml",
    file2 = ":string_utils_project_toml",
)

diff_test(
    name = "calc_utils_project_toml_diff",
    file1 = ":golden_calc_utils_project_toml",
    file2 = ":calc_utils_project_toml",
)

# Diff tests to verify the generated Manifest.toml files match expected content
diff_test(
    name = "multi_deps_test_manifest_toml_diff",
    file1 = ":golden_multi_deps_test_manifest_toml",
    file2 = ":multi_deps_test_manifest_toml",
)

diff_test(
    name = "math_utils_manifest_toml_diff",
    file1 = ":golden_math_utils_manifest_toml",
    file2 = ":math_utils_manifest_toml",
)

diff_test(
    name = "string_utils_manifest_toml_diff",
    file1 = ":golden_string_utils_manifest_toml",
    file2 = ":string_utils_manifest_toml",
)

diff_test(
    name = "calc_utils_manifest_toml_diff",
    file1 = ":golden_calc_utils_manifest_toml",
    file2 = ":calc_utils_manifest_toml",
)

# Test to validate that dependency paths in Project.toml files exist
julia_test(
    name = "project_toml_path_validation_test",
    srcs = ["project_toml_path_validation_test.jl"],
    data = [
        ":golden_calc_utils_project_toml",
        ":golden_math_utils_project_toml",
        ":golden_multi_deps_test_project_toml",
        ":golden_string_utils_project_toml",
    ],
    env = {
        "PROJECT_TOML": "$(rlocationpath :golden_multi_deps_test_project_toml)",
    },
    deps = ["//julia/runfiles"],
)
